ready for deployment with XSS security issue with some major issues fixed
